# scion

./: .gitignore  .gitmodules  CMakeLists.txt
src/app/sc4/: SC4Statics.cpp  SC4Statics.h  SC4Win.cpp  SC4Win.h  SL.cpp  SL.h  cSC4App.cpp  cSC4App.h  cSC4AutoLoadRecord.cpp  cSC4AutoLoadRecord.h  cSC4COMDirector.cpp  cSC4COMDirector.h  cSC4GDriversCOMDirector.cpp  cSC4GDriversCOMDirector.h  cSC4ScriptedWindowCOMDirector.cpp  cSC4ScriptedWindowCOMDirector.h  cSGLDriverDX7.cpp  cSGLDriverDX7.h
src/framework/include/: GZPersist.h  GZTypes.h  GZWin.h  RZStatics.h  cGZCOMLibrary.h  cGZFramework.h  cGZGraphicCOMDirector.h  cGZGraphicWin32COMDirector.h  cGZMessageServer.h  cGZMessageServer2.h  cGZWin32COMDirector.h  cGZWinCOMDirector.h  cIGZBuffer.h  cIGZGDriver.h  cIGZUnknown.h  cIGZVariant.h  cRZFile.h  cRZSystemService.h  cRZTimer.h
src/framework/src/: GZPersist.cpp  GZWin.cpp  RZStatics.cpp  cGZCOMLibrary.cpp  cGZGraphicCOMDirector.cpp  cGZGraphicWin32COMDirector.cpp  cRZCmdLine.cpp  cRZFile.cpp  cRZKeyboard.cpp  cRZMutex.cpp  cRZTimer.cpp
src/platform/blobs/: Makefile  README  The Sims 2 Bon Voyage~.x86_imp_addrs.txt  The Sims 2 Bon Voyage~.x86_imp_hooks.txt  The Sims 2 Bon Voyage~.x86_imp_overrides.txt  The Sims 2 Bon Voyage~.x86_ptr_addrs.txt  The Sims 2 Bon Voyage~.x86_ptr_hooks.txt  The Sims 2 Bon Voyage~.x86_winapi_addrs.txt  The Sims 2 Bon Voyage~.x86_winapi_hooks.txt  The Sims 2 Bon Voyage~.x86_winapi_overrides.txt  (+6 more)
tools/ida_scripts/: cITSGameStateController.h  cITSPersistSystem.h  dump_32bit_queryinterface_riids_to_json.py  fix_macho_pointers.py  gen_macho_hooks.py  generate_cpp_interface_from_vtable_struct.py  get_function_names_from_dumped_jsons.py  get_winapi_shims.py
(+140 files in other folders)
